src/objects/ANG_Account_Tracking_History__c.object
<CustomObject>
    <description>Object used to track history of Accounts, stores the label and the API name of the field that has changed along with the old and new values</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Tracking History</relationshipLabel>
        <relationshipName>Tracking_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ApiName__c</fullName>
        <description>API name of the filed that has changed</description>
        <label>ApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>Stores the new value of the field</description>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>Stores the old value of the field</description>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What__c</fullName>
        <description>Label of the field that has changed</description>
        <label>What</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Tracking History</label>
    <nameField>
        <displayFormat>TH-{00000000}</displayFormat>
        <label>Account Tracking History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tracking History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>